# failure-aware-self-healing-agent

./: README.md  pyproject.toml
src/: __init__.py  diagnostic.py  failure_event.py  healing_loop.py  recovery.py
tests/: conftest.py  test_diagnostic.py  test_failure_event.py  test_healing_loop.py  test_recovery.py
