[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failure-aware-self-healing-agent"
version = "0.1.0"
description = "Failure-Aware Self-Healing Agent (FASHA)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
